# okx-bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.en.md  README.md  ai_advisor.py  bot.ps1  bot.sh  branding.py  check_conn.py  client.py  config.py  config_loader.py  db.py  demo_order.py  docker-compose.yml  docker-entrypoint.sh  grid.py  llm_keys.py  main.py  notify.py  pyproject.toml  requirements.txt  reset.py  stats.py  stats_db.py  webui.py
docs/screenshots/: README.md
prompts/: scalp.txt
src/orbitai/: __init__.py  runtime.py
src/orbitai/cli/: backtest.py  check_conn.py  demo_order.py  main.py  reset.py  stats.py
src/orbitai/config/: branding.py  defaults.py  llm_keys.py  loader.py
src/orbitai/core/: __init__.py  advisor.py  grid.py
src/orbitai/data/: client.py  db.py  stats_db.py  ws_client.py
src/orbitai/web/: app.py
src/orbitai/web/prompts/: scalp.default.txt
src/orbitai/web/static/: i18n.js  index.html
static/: i18n.js  index.html
